Select each button using forEach()

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>rock-paper-scissor</title>
 </head>
 <body>
+    <div id="container-button">
+        <button class="rock">rock</button>
+        <button class="paper">paper</button>
+        <button class="scissor">scissor</button>
+    </div>
+
     <script src="scirpt.js"></script>
 </body>
 </html>
