--- a/index.html
+++ b/index.html
@@ -13,6 +13,27 @@
         <button class="scissor">scissor</button>
     </div>
 
+    <div class="section">
+        <div class="human">
+            <p>Human</p>
+            <p></p>
+        </div>
+        <div class="draw">
+            <p>Draw:</p>
+            <p></p>
+        </div>
+        <div class="computer">
+            <p>Ai</p>
+            <p></p>
+        </div>
+    </div>
+
+    <div class="result">
+    </div>
+
+    <div class="reset">
+        <input type="button" value="Reset">
+      </div>
     <script src="scirpt.js"></script>
 </body>
 </html>
